package is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod;

public interface Component {
    public int getResult();
}
