@startuml

title __COMPOSITELEAFOBSERVEDTEMPLATEMETHOD's Class Diagram__\n

  namespace is.hi.hbv202g.ass9 {
    namespace composite {
      namespace eafObservedTemplateMethod {
        interface is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Component {
            {abstract} + getResult()
        }
      }
    }
  }
  

  namespace is.hi.hbv202g.ass9 {
    namespace composite {
      namespace eafObservedTemplateMethod {
        abstract class is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Composite {
            # children : ArrayList<Component>
            - lastObservedResult : int
            + add()
            + getLastObservedResult()
        }
      }
    }
  }
  

  namespace is.hi.hbv202g.ass9 {
    namespace composite {
      namespace eafObservedTemplateMethod {
        class is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.MultiplyComposite {
            # children : ArrayList<Component>
            - lastObservedResult : int
            + add()
            + getLastObservedResult()
            + getResult()
            + update()
        }
      }
    }
  }
  

  namespace is.hi.hbv202g.ass9 {
    namespace composite {
      namespace eafObservedTemplateMethod {
        class is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.NumberLeaf {
            - number : int
            + NumberLeaf()
            + getResult()
            + setValue()
        }
      }
    }
  }
  

  namespace is.hi.hbv202g.ass9 {
    namespace composite {
      namespace eafObservedTemplateMethod {
        abstract class is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Observable {
            - observers : List<Observer>
            + Observable()
            + attach()
            + detachObserver()
            + notifyObservers()
        }
      }
    }
  }
  

  namespace is.hi.hbv202g.ass9 {
    namespace composite {
      namespace eafObservedTemplateMethod {
        interface is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Observer {
            {abstract} + update()
        }
      }
    }
  }
  

  namespace is.hi.hbv202g.ass9 {
    namespace composite {
      namespace eafObservedTemplateMethod {
        class is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.PlusComposite {
            # children : ArrayList<Component>
            - lastObservedResult : int
            + add()
            + getLastObservedResult()
            + getResult()
            + update()
        }
      }
    }
  }
  

  is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.MultiplyComposite .up.|> is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Component
  is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.MultiplyComposite .up.|> is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Observer
  is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.MultiplyComposite -up-|> is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Composite
  is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.NumberLeaf .up.|> is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Component
  is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.NumberLeaf -up-|> is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Observable
  is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.PlusComposite .up.|> is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Component
  is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.PlusComposite .up.|> is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Observer
  is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.PlusComposite -up-|> is.hi.hbv202g.ass9.compositeLeafObservedTemplateMethod.Composite


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
